# jellyfin-discord-presence

./: .gitignore  README.md  jellyfin_rpc.ini  pyproject.toml
src/jellyfin_rpc/: jellyfin_rpc.py
