[project]
name = "jellyfin-rpc"
version = "1.7.4"
description = "A lightweight, CLI-only Discord Rich Presence client for Jellyfin featuring direct image fetching and TVDB priority."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Ken Sible", email = "ksible@outlook.com" }]
requires-python = ">=3.12,<3.13"
dependencies = [
    "jellyfin-apiclient-python>=1.11.0",
    "pypresence@git+https://github.com/qwertyquerty/pypresence",
]

[dependency-groups]
dev = ["ruff>=0.15.11", "mypy>=1.20.1", "types-requests"]

[project.urls]
homepage = "https://github.com/BillionArrow/jellyfin-rpc"

[project.scripts]
jellyfin-rpc = "jellyfin_rpc.jellyfin_rpc:main"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
extend-select = ["I"]

[tool.ruff.format]
quote-style = "single"

[tool.mypy]
strict = true
ignore_missing_imports = true
untyped_calls_exclude = ["pypresence"]

[tool.hatch.metadata]
allow-direct-references = true

[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"
